BUGFIX: fixed width problem on mobile.

--- a/css/sauterdevs.css
+++ b/css/sauterdevs.css
@@ -323,6 +323,7 @@ a:focus {
     -webkit-transition: all .3s ease-in-out;
     -moz-transition: all .3s ease-in-out;
     transition: all .3s ease-in-out;
+    white-space: normal;
 }
 
 .btn-default {
